# valinor

./: .project  README.md  manage.py  pyproject.toml  pytest.ini
authentication/: urls.py
authentication/tests/: test_get_token.py
core/: settings.py  urls.py
core/services/: log.py
core/settings/: development.py  middleware.py  production.py  settings.py  testing.py
project/: admin.py
project/migrations/: 0001_initial.py
project/models/: project.py  requirements.py
user_profile/: admin.py
user_profile/migrations/: 0001_initial.py
user_profile/models/: user.py  user_profile.py
